--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Product Detail</string>
+    <string name="price">$ 13.95</string>
+    <string name="sepatu_lari">Running Shoes</string>
+    <string name="toko_dicoding">Dicoding Store</string>
+    <string name="diunggah_5_agu_2021">Uploaded Aug 5, 2021</string>
+    <string name="coklat">Brown</string>
+    <string name="rating_sample">4.5 (1.249)</string>
+    <string name="dummy_size_shoes">42</string>
+    <string name="dumy_description">Cool limited edition running shoes. Wearing these shoes will improve your understanding when learning to code.\n\nStuff is always there. Various sizes and colors are available. Order now!</string>
+    <string name="beli_sekarang">Buy Now!</string>
 </resources>
