--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Detalle del producto</string>
-    <string name="price">€ 12,38</string>
     <string name="sepatu_lari">Zapatos para correr</string>
     <string name="toko_dicoding">Tienda Dicoding</string>
-    <string name="diunggah_5_agu_2021">Subido el 5 de agosto de 2021</string>
     <string name="coklat">marrón</string>
-    <string name="rating_sample">4.5 (1.249)</string>
     <string name="dummy_size_shoes">42</string>
     <string name="dumy_description">Zapatillas de running geniales de edición limitada. Usar estos zapatos mejorará su comprensión al aprender el código.\n\nEl artículo siempre está en stock. Hay varios tamaños y colores disponibles. ¡Ordenar ahora!</string>
     <string name="beli_sekarang">¡Compra ahora!</string>
+
+    <string name="rating_sample">4.5</string>
+    <string name="count_rating">1249</string>
+    <string name="price">200000.00</string>
+    <string name="diunggah_5_agu_2021">5/8/2021</string>
+
+    <string name="dateFormat">Subido el %1$s</string>
+    <string name="ratingFormat">%1$s (%2$s)</string>
 </resources>
