--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Product Detail</string>
-    <string name="price">Rp. 200.000,00</string>
     <string name="sepatu_lari">Sepatu Lari</string>
     <string name="toko_dicoding">Toko Dicoding</string>
-    <string name="diunggah_5_agu_2021">Diunggah 5 Agu 2021</string>
     <string name="coklat">Coklat</string>
-    <string name="rating_sample">4.5 (1.249)</string>
     <string name="dummy_size_shoes">42</string>
     <string name="dumy_description">Sepatu lari kece edisi terbatas. Memakai sepatu ini akan meningkatkan pemahamanmu ketika belajar coding.\n\nBarang selalu ada. Tersedia berbagai ukuran dan warna. Silakan langsung order!</string>
     <string name="beli_sekarang">Beli Sekarang!</string>
+
+    <string name="rating_sample">4.5</string>
+    <string name="count_rating">1249</string>
+    <string name="price">200000.00</string>
+    <string name="diunggah_5_agu_2021">5/8/2021</string>
+
+    <string name="dateFormat">Diunggah pada %1$s</string>
+    <string name="ratingFormat">%1$s (%2$s)</string>
 </resources>
