--- a/app/src/main/res/values-jv/strings.xml
+++ b/app/src/main/res/values-jv/strings.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Detailipun Produk</string>
-    <string name="price">$ 13.95</string>
     <string name="sepatu_lari">Sepatu Damel Playon</string>
     <string name="toko_dicoding">Warung Dicoding</string>
-    <string name="diunggah_5_agu_2021">Dipasang 5 Agustus 2021</string>
     <string name="coklat">Soklat</string>
-    <string name="rating_sample">4.5 (1.249)</string>
     <string name="dummy_size_shoes">42</string>
     <string name="dumy_description">Sepatu damel playon edisi namung kedik. Yen ngagem sepatu niki saget ningkataken pemahaman panjenengan nalika sinau coding.\n\nBarang mesti wonten. Sepatu punika wonten ing katah ukuran lan warna. Monggo dipun pesen!</string>
     <string name="beli_sekarang">Tumbasen Sak Niki!</string>
+
+    <string name="rating_sample">4.5</string>
+    <string name="count_rating">1249</string>
+    <string name="price">200000.00</string>
+    <string name="diunggah_5_agu_2021">5/8/2021</string>
+
+    <string name="dateFormat">Dipasang %1$s</string>
+    <string name="ratingFormat">%1$s (%2$s)</string>
 </resources>
